--- a/index.html
+++ b/index.html
@@ -96,7 +96,45 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
    sessionTimeoutInSeconds: 30,
    minimumIntervalBetweenTriggerActionsInSeconds: 30
  });
-  braze.automaticallyShowInAppMessages();
+ braze.subscribeToInAppMessage(function(inAppMessage) {
+ // check if message is not a control variant
+ if (inAppMessage instanceof braze.inAppMessage) {
+   // access the key-value pairs, defined as `extras`
+   const keyValuePairs = inAppMessage.extras || {};
+   // check the value of our key `msg-id` defined in the Braze dashboard
+   if (keyValuePairs["msg-id"] === "push-primer") {
+     // We don't want to display the soft push prompt to users on browsers
+     // that don't support push, or if the user has already granted/blocked permission
+     if (
+       braze.isPushSupported() === false ||
+       braze.isPushPermissionGranted() ||
+       braze.isPushBlocked()
+     ) {
+       // do not call `showInAppMessage`
+       return;
+     }
+
+     // user is eligible to receive the native prompt
+     // register a click handler on one of the two buttons
+     if (inAppMessage.buttons[0]) {
+       // Prompt the user when the first button is clicked
+       inAppMessage.buttons[0].subscribeToClickedEvent(function() {
+         braze.requestPushPermission(
+           function() {
+             // success!
+           },
+           function() {
+             // user declined
+           }
+         );
+       });
+     }
+   }
+ }
+
+ // show the in-app message now
+ braze.showInAppMessage(inAppMessage);
+});
   braze.subscribeToContentCardsUpdates(function(contentCards) {
     console.log(contentCards);
   });
