--- a/index.html
+++ b/index.html
@@ -107,6 +107,14 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
 
 <body>
 
+  <header class="hero">
+    <div class="hero-content">
+      <h1>Welcome to Our Website</h1>
+      <p>Your journey to amazing experiences starts here.</p>
+      <a href="#learn-more" class="cta-button">Learn More</a>
+    </div>
+  </header>
+
   <h1>Braze Web SDK Tutorial Site</h1>
   <h3>A Seth Tilliss Production</h3>
 
