--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
   braze.subscribeToContentCardsUpdates(function(contentCards) {
     console.log(contentCards);
   });
+  
+  braze.subscribeToBannersUpdates((banners) => {
+    console.log(`Banners were updated`);
+})
   braze.openSession();
 </script>
 </head>
@@ -114,9 +118,6 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
       <a href="#learn-more" class="cta-button">Learn More</a>
     </div>
   </header>
-
-  <h1>Braze Web SDK Tutorial Site</h1>
-  <h3>A Seth Tilliss Production</h3>
 
   <br />
 
