--- a/index.html
+++ b/index.html
@@ -105,6 +105,23 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
   braze.subscribeToBannersUpdates((banners) => {
     console.log(`Banners were updated`);
 })
+
+// get this placement's banner. If it's `null` the user did not qualify for one.
+const globalBanner = braze.getBanner("aki_hero");
+
+// choose where in the DOM you want to insert the banner HTML
+const container = document.getElementById("hero-content");
+
+// Insert the banner which replacees the innerHTML of that container
+braze.insertBanner(globalBanner, container);
+
+// Special handling if the user is part of a Control Variant
+if (globalBanner.isControl) {
+    // hide or collapse the container
+    container.style.display = 'none';
+}
+
+
   braze.openSession();
 </script>
 </head>
