--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
 const globalBanner = braze.getBanner("aki_hero");
 
 // choose where in the DOM you want to insert the banner HTML
-const container = document.getElementById("hero-content");
+const container = document.getElementById("hero");
 
 // Insert the banner which replacees the innerHTML of that container
 braze.insertBanner(globalBanner, container);
@@ -129,7 +129,7 @@ if (globalBanner.isControl) {
 <body>
 
   <header class="hero">
-    <div class="hero-content">
+    <div class="hero-content" id="hero">
       <h1>Welcome to Our Website</h1>
       <p>Your journey to amazing experiences starts here.</p>
       <a href="#learn-more" class="cta-button">Learn More</a>
