--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ braze.initialize('3ec83d48-bbcb-404c-b640-300c9212d6ed', {
   braze.subscribeToBannersUpdates((banners) => {
     console.log(`Banners were updated`);
 })
+braze.requestBannersRefresh(["aki_hero"])
 
 // get this placement's banner. If it's `null` the user did not qualify for one.
 const globalBanner = braze.getBanner("aki_hero");
