--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ if (globalBanner.isControl) {
 
 <body>
 
-    <div class="hero-content" id="aki-hero">
+    <div id="aki-hero">
     </div>
 
   <br />
