added second banner placement

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@ braze.initialize('6a73367f-7f09-4e68-9ab3-4abfaaa8d24b', {
     <div id="aki-hero">
     </div>
 
+    <div id="aki-hero">
+    </div>
+
   <br />
 
   <!-- Button trigger modal -->
